@@ -3,8 +3,12 @@
 #
 # $PREFIX is your presumed installation directory
 
+[Bootstrap]
+Zip=../media/OgreCore.zip
+
+[Cegui]
+
 [General]
-Zip=../../OLD/rainbrurpg/media/packs/OgreCore.zip
 Zip=../../OLD/rainbrurpg/media/packs/dragon.zip
 #Zip=~/ogre_src_v1-8-1/Samples/Media/packs/dragon.zip
 FileSystem=../../OLD/rainbrurpg/media/materials/scripts/
